<resources>
    <string name="app_name">Flow</string>
    <string name="title_flow">Flow</string>
    <string name="title_find">Search</string>
    <string name="title_message">Messages</string>
    <string name="title_answers">Answers</string>
    <string name="title_my_account">My Profile</string>
    <string name="title_login">Login</string>
    <string name="title_text_question">Text Question</string>
    <string name="title_register">Register</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>






</resources>