<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_flow">

    <fragment
        android:id="@+id/navigation_flow"
        android:name="com.mkmcmxci.flow.ui.flow.FlowFragment"
        android:label="@string/title_flow"
        tools:layout="@layout/fragment_flow">
        <action
            android:id="@+id/action_navigation_flow_to_navigation_answer"
            app:destination="@id/navigation_answer" />
        <action
            android:id="@+id/action_navigation_flow_to_navigation_answer2"
            app:destination="@id/navigation_answer"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_find"
        android:name="com.mkmcmxci.flow.ui.search.SearchFragment"
        android:label="@string/title_find"
        tools:layout="@layout/fragment_find">
        <action
            android:id="@+id/action_navigation_find_to_navigation_find_category_row"
            app:destination="@id/navigation_find_category_row" />
        <action
            android:id="@+id/action_navigation_find_to_navigation_answer"
            app:destination="@id/navigation_answer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_find_category_row"
        android:name="com.mkmcmxci.flow.ui.search.CategoryDetailsFragment"
        android:label="@string/title_find"
        tools:layout="@layout/fragment_category_details">
        <action
            android:id="@+id/action_navigation_find_category_row_to_navigation_answer"
            app:destination="@id/navigation_answer"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_find_category_row_to_navigation_find"
            app:destination="@id/navigation_find" />
    </fragment>

    <fragment
        android:id="@+id/navigation_answer"
        android:name="com.mkmcmxci.flow.ui.flow.AnswerFragment"
        android:label="@string/title_answers"
        tools:layout="@layout/fragment_answer">
        <action
            android:id="@+id/action_navigation_answer_to_navigation_flow"
            app:destination="@id/navigation_flow"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_answer_to_navigation_find_category_row"
            app:destination="@id/navigation_find_category_row" />
        <action
            android:id="@+id/action_navigation_answer_self"
            app:destination="@id/navigation_answer"
            app:popUpTo="@id/navigation_answer"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_answer_to_navigation_show_profile"
            app:destination="@id/navigation_show_profile"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_answer_to_navigation_edit_question"
            app:destination="@id/navigation_edit_question"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation_edit_question"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_answer_to_navigation_send_answers"
            app:destination="@id/navigation_send_answers"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation_send_answers"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.mkmcmxci.flow.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_my_account"
        android:name="com.mkmcmxci.flow.ui.myaccount.MyAccountFragment"
        android:label="@string/title_my_account"
        tools:layout="@layout/fragment_my_account">
        <action
            android:id="@+id/action_navigation_my_account_to_navigation_my_account_settings"
            app:destination="@id/navigation_my_account_settings"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_my_account_to_navigation_answer"
            app:destination="@id/navigation_answer"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_account_settings"
        android:name="com.mkmcmxci.flow.ui.myaccount.MyAccountSettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_profile_settings">
        <action
            android:id="@+id/action_navigation_my_account_settings_to_navigation_my_account"
            app:destination="@id/navigation_my_account"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_my_account_settings_self"
            app:destination="@id/navigation_my_account_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_show_profile"
        android:name="com.mkmcmxci.flow.ui.showprofile.ShowProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_show_profile">

        <action
            android:id="@+id/action_navigation_show_profile_to_navigation_answer"
            app:destination="@id/navigation_answer"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_question"
        android:name="com.mkmcmxci.flow.ui.showprofile.ShowProfileEditQuestionFragment"
        android:label="@string/title_text_question"
        tools:layout="@layout/fragment_edit_question">

        <action
            android:id="@+id/action_navigation_edit_question_to_navigation_answer"
            app:destination="@id/navigation_answer"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation_edit_question"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_send_answers"
        android:name="com.mkmcmxci.flow.ui.flow.AnswerSendFragment"
        android:label="@string/title_answers"
        tools:layout="@layout/fragment_answer_send">

        <action
            android:id="@+id/action_navigation_send_answers_to_navigation_answer"
            app:destination="@id/navigation_answer"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation_send_answers"
            app:popUpToInclusive="true" />
    </fragment>


</navigation>